test/bad/bad_block_03.mpp
var x,y,z:bool;
begin
    read x;
    read y
    read z;
end
